# predictor

./: .gitignore  .gitmodules  comments_test.ods
analysis/reddit/: comment_cleaner.py  process_text.py
analysis/reddit/resources/: text_processing.ini
database/: File size comparison and checking db writing.txt  database.py
database/schemas/: comments.schema  submissions.schema
get_data/reddit/: TODO.txt  get_data_reddit_main.py  praw.ini
get_data/reddit/c++/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  predictor.cbp  process_results.cbp  process_results.cpp  process_results.h  test.py
get_data/reddit/resources/: comment_attributes.txt  comment_attributes_included.txt  config.ini  pushshift_parameters.txt  submission_attributes.txt
